fixing layout problems

--- a/src/styles/pages/about.module.scss
+++ b/src/styles/pages/about.module.scss
@@ -8,6 +8,8 @@
   text-align: justify;
   font-size: 16px;
   line-height: 150%;
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 .header {
